fix spacing on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,8 +92,8 @@
   z-index: 100;
   text-decoration: none;
   text-shadow: 0;
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   border-bottom: 2px solid #fff;
   border-right: 2px solid #fff;
   z-index: 9;
